# openai-agent

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements.dev.txt  requirements.txt
docs/: deterministic_flow.md  guardrail.md  handoff.md  tool_conditional.md  tool_selection.md
openai_agent/: hosting.py
openai_agent/agentic_patterns/: deterministic_flow.py  force_tool_use.py  guardrail.py  handoff.py  tool_conditional.py  tool_selection.py
openai_agent/agentic_patterns/common/: doctor_agents.py  language_agents.py  llm_model.py
openai_agent/protocols/: i_azure_openai_service.py
openai_agent/services/: azure_openai_service.py
tests/openai_agent/services/: test_azure_openai_service.py
